2008-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/common.mk:
	  Fail when any config fails to parse, not just the last one.
	* conf/examples/default.xml:
	* conf/examples/discont.xml:
	* conf/examples/twores.xml:
	  Remove <source> tags for <eater> tags.
	  Created related bug #1182.

2008-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/admin_gtk.py:
	* flumotion/component/misc/httpserver/cachedprovider.py:
	* flumotion/component/misc/httpserver/cachestats.py:
	* flumotion/component/misc/httpserver/httpserver.glade:
	  While canceled is allowed spelling, everywhere else we've
	  used cancelled instead.

2008-11-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/misc/httpserver/httpserver.xml:
	* flumotion/component/misc/httpserver/cachedprovider.py:
	  Use float from 0.0 to 1.0 instead of percentage.
	  Use ten-based powers for MB and KB.
	  Rename some properties to indicate low and high watermark.
	  Add some debugginf for cache cleanup.
	* conf/Makefile.am:
	* conf/examples/ondemand-cache.xml (added):
	  Add an example.

2008-11-05  Jan Urbanski  <jurbanski@flumotion.com>

	* common/show-coverage.py:
	Upgrade the algorithm that determines which lines were covered and
	which lines could be covered, but where not.

2008-11-05  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
	Spanish translation syncronized.

2008-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/test/test_icalbouncer.py (added):
	Add a test case for the iCalendar bouncer. Fixes #1173.

2008-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Add missing import.

2008-11-04  Jan Urbanski  <jurbanski@flumotion.com>

	reviewed by: Arek Korbik <arek@flumotion.com>

	* flumotion/common/eventcalendar.py:
	Make the module importable without having icalendar and dateutils
	modules.